--- a/centos7/ssh/Dockerfile
+++ b/centos7/ssh/Dockerfile
@@ -1,10 +1,13 @@
-FROM rust-centos7
+FROM rust-vcpkg-centos7
 
 # yum -y install yum-utils
 # repoquery --list bash
 
 # docker build -t rust-centos7-dev centos7\ssh\
-# docker run -ti --rm rust-centos7-dev /bin/bash
+# docker run -ti --rm rust-centos7-dev /bin/bash \
+# docker run -p 222:22 --detach --name rust-centos7-dev rust-centos7-dev
+# docker inspect --format '{{ .NetworkSettings.IPAddress }}' rust-centos7-dev
+
 
 RUN yum install -y openssh-server openssh-clients
 RUN set -eux; \
@@ -20,9 +23,6 @@ CMD ["/usr/sbin/sshd", "-D"]
 # route /P add 172.0.0.0 MASK 255.0.0.0 10.0.75.2
 
 # docker logs rust-centos7-dev
-# docker inspect --format '{{ .NetworkSettings.IPAddress }}' rust-centos7-dev
-# docker build -t rust-centos7-dev:v0.1.0 -f rust-centos7-dev .
-# docker run -p 22:22 --detach --name rust-centos7-dev rust-centos7-dev:v0.1.0
 # docker container stop rust-centos7-dev
 # docker run -p 22:22 -ti --rm --name test_sshd rust-centos7-dev:v0.1.0 /bin/bash
 
