--- a/centos7/vcpkg/Dockerfile
+++ b/centos7/vcpkg/Dockerfile
@@ -35,4 +35,6 @@ RUN source scl_source enable devtoolset-7 rh-git218; \
 ENV VCPKG_ROOT=/vcpkg
 
 RUN echo "source scl_source enable devtoolset-7 rh-git218"  >> /etc/profile; \
-    echo "export VCPKG_ROOT=/vcpkg" >> /etc/profile;
+    echo "export VCPKG_ROOT=/vcpkg" >> /etc/profile; \
+    echo "source scl_source enable devtoolset-7 rh-git218"  >> /root/.bashrc; \
+    echo "export VCPKG_ROOT=/vcpkg" >> /root/.bashrc;
