--- a/centos7/rust/Dockerfile
+++ b/centos7/rust/Dockerfile
@@ -33,3 +33,6 @@ RUN set -eux; \
     echo "export PATH=$PATH" >> ${HOME}/.bashrc; \
     echo "export CARGO_HOME=$CARGO_HOME" >> ${HOME}/.bashrc; \
     echo "export RUSTUP_HOME=$RUSTUP_HOME" >> ${HOME}/.bashrc;
+
+VOLUME /usr/local/rustup
+VOLUME /usr/local/cargo
