systemfd cargo-watch

--- a/centos7/bk-dev/Dockerfile
+++ b/centos7/bk-dev/Dockerfile
@@ -9,4 +9,5 @@ EXPOSE 3000
 VOLUME /root/bk
 RUN set -eux; \
     git config --global user.email "jianglibo@gmail.com"; \
-    git config --global user.name "jianglibo";
+    git config --global user.name "jianglibo"; \
+    cargo install systemfd cargo-watch;
