--- a/centos7/rust-vcpkg/Dockerfile
+++ b/centos7/rust-vcpkg/Dockerfile
@@ -6,6 +6,8 @@ FROM jianglibo/c7-rust
 # default shell.
 SHELL ["/bin/sh", "-c"]
 
+ENV PATH=/vcpkg:$PATH
+
 RUN set -eux; \
     yum install -y --setopt=tsflags=nodocs curl unzip tar telnet;
 
@@ -30,6 +32,7 @@ RUN source scl_source enable devtoolset-7; \
 RUN source scl_source enable devtoolset-7 rh-git218; \
     set -eux; \
     cd /vcpkg; \
+    yum install -y openssl-devel; \
     ./vcpkg install libssh2 sqlite3 openssl;
 
 ENV VCPKG_ROOT=/vcpkg
@@ -37,7 +40,9 @@ ENV VCPKG_ROOT=/vcpkg
 RUN set -eux; \
     echo "source scl_source enable devtoolset-7 rh-git218"  >> /etc/profile; \
     echo "export VCPKG_ROOT=/vcpkg" >> /etc/profile; \
+    echo "export PATH=$PATH" >> /etc/profile; \
     echo "source scl_source enable devtoolset-7 rh-git218"  >> /root/.bashrc; \
-    echo "export VCPKG_ROOT=/vcpkg" >> /root/.bashrc;
+    echo "export VCPKG_ROOT=/vcpkg" >> /root/.bashrc; \
+    echo "export PATH=$PATH" >> ${HOME}/.bashrc;
 
 VOLUME /vcpkg
