--- a/centos7/rust-vcpkg/Dockerfile
+++ b/centos7/rust-vcpkg/Dockerfile
@@ -38,11 +38,11 @@ RUN source scl_source enable devtoolset-7 rh-git218; \
 ENV VCPKG_ROOT=/vcpkg
 
 RUN set -eux; \
-    echo "source scl_source enable devtoolset-7 rh-git218"  >> /etc/profile; \
     echo "export VCPKG_ROOT=/vcpkg" >> /etc/profile; \
     echo "export PATH=$PATH" >> /etc/profile; \
-    echo "source scl_source enable devtoolset-7 rh-git218"  >> /root/.bashrc; \
-    echo "export VCPKG_ROOT=/vcpkg" >> /root/.bashrc; \
-    echo "export PATH=$PATH" >> ${HOME}/.bashrc;
+    echo "source scl_source enable devtoolset-7 rh-git218"  >> /etc/profile; \
+    echo "export VCPKG_ROOT=/vcpkg" >> ${HOME}/.bashrc; \
+    echo "export PATH=$PATH" >> ${HOME}/.bashrc; \
+    echo "source scl_source enable devtoolset-7 rh-git218"  >> ${HOME}/.bashrc;
 
 VOLUME /vcpkg
