--- a/centos8/rust-vcpkg/Dockerfile
+++ b/centos8/rust-vcpkg/Dockerfile
@@ -1,4 +1,4 @@
-FROM jianglibo/c7-rust
+FROM jianglibo/c8-rust
 
 # docker build -t centos7/rust-vcpkg centos7/vcpkg/
 # docker run -ti --rm centos7/rust-vcpkg /bin/bash
@@ -9,29 +9,15 @@ SHELL ["/bin/sh", "-c"]
 ENV PATH=/vcpkg:$PATH
 
 RUN set -eux; \
-    yum install -y --setopt=tsflags=nodocs curl unzip tar telnet;
-
-RUN set -eux; \
-    yum install -y --setopt=tsflags=nodocs centos-release-scl devtoolset-7; \
-    yum install -y --setopt=tsflags=nodocs centos-release-scl devtoolset-7;
+    yum install -y --setopt=tsflags=nodocs curl unzip tar telnet gcc gcc-c++ make cmake;
 
 RUN set -eux; \
     cd /; \
-    git clone https://github.com/Microsoft/vcpkg.git;
-
-RUN source scl_source enable devtoolset-7; \
-    set -eux; \
+    git clone https://github.com/Microsoft/vcpkg.git; \
     cd /vcpkg; \
+    sed -i 's/get_path(paths, GitProvider())/{\"git\", \"0\"}/g' toolsrc/src/vcpkg/tools.cpp; \
     ./bootstrap-vcpkg.sh; \
-    ./vcpkg integrate install;
-
-RUN source scl_source enable devtoolset-7; \
-    set -eux; \
-    yum -y install rh-git218;
-
-RUN source scl_source enable devtoolset-7 rh-git218; \
-    set -eux; \
-    cd /vcpkg; \
+    ./vcpkg integrate install; \
     yum install -y openssl-devel; \
     ./vcpkg install libssh2 sqlite3 openssl;
 
@@ -40,9 +26,7 @@ ENV VCPKG_ROOT=/vcpkg
 RUN set -eux; \
     echo "export VCPKG_ROOT=/vcpkg" >> /etc/profile; \
     echo "export PATH=$PATH" >> /etc/profile; \
-    echo "source scl_source enable devtoolset-7 rh-git218"  >> /etc/profile; \
     echo "export VCPKG_ROOT=/vcpkg" >> ${HOME}/.bashrc; \
-    echo "export PATH=$PATH" >> ${HOME}/.bashrc; \
-    echo "source scl_source enable devtoolset-7 rh-git218"  >> ${HOME}/.bashrc;
+    echo "export PATH=$PATH" >> ${HOME}/.bashrc;
 
 VOLUME /vcpkg
