--- a/centos8/java-13/Dockerfile
+++ b/centos8/java-13/Dockerfile
@@ -54,4 +54,13 @@ RUN set -eux; \
 		# https://docs.oracle.com/javase/10/tools/jshell.htm
 		# https://docs.oracle.com/javase/10/jshell/
 		# https://en.wikipedia.org/wiki/JShell
+	RUN set -eux; \
+		\
+		curl -fL -o /mvn.tar.gz http://mirrors.tuna.tsinghua.edu.cn/apache/maven/maven-3/3.6.3/binaries/apache-maven-3.6.3-bin.tar.gz; \
+		mkdir /maven; \
+		tar --extract --file /mvn.tar.gz --directory /maven; \
+		cd /usr/bin; \
+		ln -s /maven/apache-maven-3.6.3/bin/mvn; \
+		ln -s /maven/apache-maven-3.6.3/bin/mvnDebug; \
+		cd / 
 CMD ["jshell"]
