--- a/centos7/bk-dev/Dockerfile
+++ b/centos7/bk-dev/Dockerfile
@@ -11,7 +11,7 @@ RUN set -eux; \
     git config --global user.email "jianglibo@gmail.com"; \
     git config --global user.name "jianglibo"; \
     cargo install systemfd cargo-watch; \
-    yarn add global hasura; \
+    yarn add global hasura-cli; \
     yarn add global graphqurl; \
     hasura completion bash --file=/etc/bash_completion.d/hasura
 
