--- a/centos7/rust-vcpkg/Dockerfile
+++ b/centos7/rust-vcpkg/Dockerfile
@@ -45,4 +45,6 @@ RUN set -eux; \
     echo "export PATH=/vcpkg:$PATH" >> ${HOME}/.bashrc; \
     echo "source scl_source enable devtoolset-7 rh-git218"  >> ${HOME}/.bashrc;
 
+ENV X_SCLS=
+
 VOLUME /vcpkg
