--- a/centos7/rust-vcpkg-yarn/Dockerfile
+++ b/centos7/rust-vcpkg-yarn/Dockerfile
@@ -9,5 +9,8 @@ RUN set -eux; \
 
 RUN set -eux; \
     curl --silent --location https://dl.yarnpkg.com/rpm/yarn.repo | tee /etc/yum.repos.d/yarn.repo; \
+    cat /etc/yum.repos.d/yarn.repo
+
+RUN set -eux; \
     yum install -y yarn; \
-    curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh;
+    curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
