--- a/centos7/bk-dev/Dockerfile
+++ b/centos7/bk-dev/Dockerfile
@@ -21,8 +21,11 @@ RUN set -eux; \
 
 RUN set -eux; \
     yarn global add graphqurl
-
+ADD hasura-inst.sh /
 RUN set -eux; \
-    curl -L https://github.com/hasura/graphql-engine/raw/master/cli/get.sh | bash; \
+    \
+#    curl -L https://github.com/hasura/graphql-engine/raw/master/cli/get.sh | bash; \
+    chmod a+x /hasura-inst.sh; \
+    /hasura-inst.sh; \
     hasura completion bash --file=/etc/bash_completion.d/hasura
 
