--- a/centos8/gatsby/Dockerfile
+++ b/centos8/gatsby/Dockerfile
@@ -8,4 +8,14 @@ RUN set -eux; \
     yum install -y nodejs; \
     curl --silent --location https://dl.yarnpkg.com/rpm/yarn.repo | tee /etc/yum.repos.d/yarn.repo; \
     yum install -y yarn git libpng-devel; \
-    yarn global add gatsby-cli
+    git config --global user.email "jianglibo@gmail.com"; \
+    git config --global user.name "jianglibo"
+
+RUN set -eux; \
+    yarn global add gatsby-cli; \
+    echo "{\"cli\": {\"packageManager\": \"yarn\"}}" > ~/.config/gatsby/config.json; \
+    gatsby new ap
+
+EXPOSE 8000
+VOLUME /gatsybies
+    
