--- a/centos8/bk-dev/Dockerfile
+++ b/centos8/bk-dev/Dockerfile
@@ -10,6 +10,6 @@ VOLUME /root/bk
 RUN set -eux; \
     git config --global user.email "jianglibo@gmail.com"; \
     git config --global user.name "jianglibo"; \
-    cargo install systemfd cargo-watch;
-    yarn add global hasura;
+    cargo install systemfd cargo-watch; \
+    yarn add global hasura; \
     hasura completion bash --file=/etc/bash_completion.d/hasura;
