--- a/centos7/rust-vcpkg-yarn-ssh/Dockerfile
+++ b/centos7/rust-vcpkg-yarn-ssh/Dockerfile
@@ -14,7 +14,7 @@ RUN set -eux; \
     sed -i 's/#PermitRootLogin yes/PermitRootLogin yes/' /etc/ssh/sshd_config; \
     /usr/bin/ssh-keygen -A;
 
-VOLUME /root/.vscode-server
+# VOLUME /root/.vscode-server
 
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
