--- a/centos8/gatsby-ssh/Dockerfile
+++ b/centos8/gatsby-ssh/Dockerfile
@@ -11,8 +11,8 @@ RUN set -eux; \
     sed -i 's/#PermitRootLogin yes/PermitRootLogin yes/' /etc/ssh/sshd_config; \
     /usr/bin/ssh-keygen -A;
 
-VOLUME /root
-VOLUME /gatsbies
+# VOLUME /root
+# VOLUME /gatsbies
 
 EXPOSE 22
 CMD ["/usr/sbin/sshd", "-D"]
