--- a/centos7/bk-dev/Dockerfile
+++ b/centos7/bk-dev/Dockerfile
@@ -6,7 +6,7 @@ SHELL ["/bin/sh", "-c"]
 EXPOSE 8000
 EXPOSE 3000
 
-VOLUME /root/bk
+# VOLUME /root/bk
 
 RUN set -eux; \
     git config --global user.email "jianglibo@gmail.com"; \
